# sglang-deployment-poc

./: .env.example  .gitignore  CLAUDE.md  LESSONS_LEARNED.md  Makefile  README.md  RUNBOOK.md  pyproject.toml
scripts/: chat.py  validate_env.py
slurm/: llama3-70b-coreweave-b200.sbatch  llama3-70b-single-node.sbatch
